fix private MTG Set startup